@@ -261,16 +261,7 @@ surface locator::load_image_file() const
 
 	do {
 		if (!location.empty()) {
-#ifdef USE_ZIPIOS
-			std::string const &s = read_file(location);
-			if (!s.empty()) {
-				SDL_RWops* ops = SDL_RWFromMem((void*)s.c_str(), s.size());
-				res = IMG_Load_RW(ops, 0);
-				SDL_FreeRW(ops);
-			}
-#else
 			res = IMG_Load(location.c_str());
-#endif
 		}
 		if (res.null() && (!try_units)) {
 			try_units = true;
