@@ -25,6 +25,7 @@ Version 1.3.3+svn:
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
+   * removed zipios support
    
 Version 1.3.3:
  * campaigns:
